# life

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: life.cpp  life.h  main.cpp  petri.cpp  petri.h
